packages/cashc/test/syntax/fail/empty_list_trailing_comma.cash
contract Contract(
    pubkey ownerPk,
    pubkey oraclePk,
) {
    function spend(,) {
        bytes oracleMessage = bytes('Spend') + bytes(12, 10,);
        require(checkDataSig(
            oracleMsgSig,
            oracleMessage,
            oraclePk,
        ));
        require(checkMultiSig([
            ownerSig,
            oracleTxSig,
        ], [
            ownerPk,
            oraclePk,
        ]));
    }
}
